--- a/client/public/index.html
+++ b/client/public/index.html
@@ -42,7 +42,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Full Stack</title>
+    <title>Graduates Ebook</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
